# rag-arena

./: .gitignore  LICENSE  README.md  arena.yaml  pyproject.toml
arena/: __init__.py  cli.py  config.py
arena/backends/: __init__.py  base.py  bm25_backend.py  direct_embeddings.py  hybrid_backend.py  hybrid_st_backend.py  st_embeddings.py
arena/benchmarks/: __init__.py  base.py  beir_subset.py  hotpotqa.py  locomo.py  ms_marco.py  natural_questions.py  synthetic_multihop.py
arena/hypotheses/: __init__.py  base.py
arena/hypotheses/cross_encoder/: __init__.py  bm25_boosted_ce.py  bm25_text_feature_ce.py  ce_answer_extraction.py  ce_calibrated.py  ce_coverage_greedy.py  ce_cross_doc.py  ce_diversity_bonus.py  ce_ensemble.py  ce_iterative.py  ce_larger_model.py  (+21 more)
arena/metrics/: __init__.py  scoring.py
arena/runners/: __init__.py  arena_runner.py
experiments/: cache_and_run.sh  cache_embeddings.py  run_beat_gold_standard.py  run_composability_bge.py  run_composability_li_fix.py  run_composability_remaining.py  run_composability_test.py  run_full_bench.py  run_gold_standard.py  run_locomo_arena.py  run_mram_hotpotqa.py  run_mram_msmarco.py  run_mram_phase1.py  run_mram_phase2.py  run_mram_v2_msmarco.py  run_novel_arena.py  run_robust_experiments.py  run_round4_final.py  run_round5_novel.py  run_round6_llm.py  run_round6_top.py  run_round7_fiqa.py  run_sota_benchmark.py  run_statistical_validation.py  run_synthetic_arena.py  run_upgraded_sota.py
tests/: test_benchmarks.py  test_geometric_hypotheses.py  test_hypotheses.py  test_metrics.py  test_scaling_hypotheses.py
(+121 files in other folders)
