[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arena*"]

[project]
name = "rag-arena"
version = "0.1.0"
description = "RAG performance arena — test retrieval hypotheses against standardised benchmarks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "hsamuelson" },
]
keywords = ["rag", "retrieval", "embeddings", "benchmarks", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26",
    "requests>=2.31",
    "pyyaml>=6.0",
    "datasets>=2.16",      # HuggingFace datasets (LoCoMo, BEIR, etc.)
    "tqdm>=4.66",
    "spacy>=3.7",           # NER for MRAM entity association (Phase 2)
]

[project.urls]
Repository = "https://github.com/hsamuelson/rag-arena"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
rag-arena = "arena.cli:main"
